--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.30)
-project(TrabalhoAlexMedio C)
+project(Frota C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(TrabalhoAlexMedio main.c)
+add_executable(Frota main.c)
